# QAPlotter

./: LICENSE.rst  README.rst  setup.cfg  setup.py  tox.ini
docs/: conf.py  index.rst
docs/qaplotter/: index.rst
qaplotter/: __init__.py  amp_phase_cal_plots.py  basic_plots.py  bp_plots.py  field_plots.py  html_linking.py  parse_weblog.py  quicklook_target_imaging.py  target_summary_plots.py  track_set.py
qaplotter/utils/: __init__.py  generate_obslog_link.py  load_spwmapping.py  read_casa_table.py  read_data.py  time_conversion.py
