[metadata]
name = qaplotter
author = LocalGroup-VLALegacy
author_email = koch.eric.w@gmail.com
license = MIT
license_file = LICENSE.rst
url =
description = Make interactive figures for QA of VLA data
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = False
github_project = LocalGroup-VLALegacy/QAPlotter

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
setup_requires = setuptools_scm
install_requires =
    astropy
    plotly>=5.5.0
    numpy
    spectral-cube
    casa-formats-io
    bs4
    lxml
    pandas

[options.extras_require]
test =
    pytest-astropy
docs =
    sphinx-astropy

[options.package_data]
qaplotter = data/*

[tool:pytest]
testpaths = "qaplotter" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
    qaplotter/_astropy_init*
    qaplotter/conftest.py
    qaplotter/*setup_package*
    qaplotter/tests/*
    qaplotter/*/tests/*
    qaplotter/extern/*
    qaplotter/version*
    */qaplotter/_astropy_init*
    */qaplotter/conftest.py
    */qaplotter/*setup_package*
    */qaplotter/tests/*
    */qaplotter/*/tests/*
    */qaplotter/extern/*
    */qaplotter/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
